# cdp-local-dev

./: CLAUDE.md  MANIFEST.in  README.md  bootstrap.py  pyproject.toml  setup.cfg
.Jules/: palette.md
.claude/: settings.local.json
.jules/: bolt.md  palette.md
cdp_dev/: __main__.py  cli.py  compose_manager.py  helm_manager.py  kind_manager.py  migration.py  path_helper.py  port_forward.py  preflight.py  project.py  utils.py
cdp_dev/commands/: destroy.py  install.py  logs.py  start.py  status.py  stop.py  test.py
cdp_dev/helm/values/: airflow.yaml
cdp_dev/templates/: .env.template  docker-compose.yml
cdp_local_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
helm/kind/: kind-config.yaml
helm/values/: airflow.yaml
tests/: conftest.py  test_helm_manager.py
