[options]
packages =
    cdp_dev
    cdp_dev.commands

package_dir =
    = .

include_package_data = True

[options.package_data]
cdp_dev =
    __main__.py
    *.py
    commands/*.py
* =
    helm/kind/*.yaml
    helm/values/*.yaml

[options.entry_points]
console_scripts =
    cdp-dev = cdp_dev.cli:main
